--- a/getawaygrid/api/package.json
+++ b/getawaygrid/api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "airbnb-api",
+  "name": "getawaygrid",
   "version": "1.0.0",
-  "description": "API for airbnb clone app",
+  "description": "API for getawaygrid",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -10,8 +10,8 @@
     "api",
     "backend"
   ],
-  "author": "rahul4019",
-  "license": "ISC",
+  "author": "NimishaSabari",
+  
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.35.0",
